Postpone the Binding restore mode behavior change to Qt 6.0

Also, add a note to the "when" property about it.

[ChangeLog] The change in the default behavior of Binding elements
regarding literal values has been postponed to Qt 6.0.

Task-number: QTBUG-78566
Change-Id: I2cc6f01230589b176b08f53a45c02123bb961020
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>